# phynix

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  rustfmt.toml
crates/phynix-cli/: Cargo.toml
crates/phynix-cli/src/: main.rs
crates/phynix-parse/: Cargo.toml
crates/phynix-parse/src/: lib.rs
crates/phynix-parse/src/ast/: array.rs  attribute.rs  call.rs  class.rs  closure.rs  control_flow.rs  expr.rs  function.rs  literal.rs  match.rs  mod.rs  name.rs  op.rs  script.rs  stmt.rs  type_ref.rs  use.rs
crates/phynix-parse/src/parser/: mod.rs  name.rs  util.rs
crates/phynix-parse/src/parser/expr/: binop.rs  call.rs  closure.rs  eval.rs  include.rs  list.rs  literal.rs  match.rs  mod.rs  new.rs  parens.rs  print.rs  variable.rs  yield_like.rs
crates/phynix-parse/src/parser/stmt/: attribute.rs  break.rs  class_decl.rs  const_decl.rs  declare.rs  echo.rs  enum_decl.rs  expr_stmt.rs  for_like.rs  function_decl.rs  global.rs  goto.rs  if.rs  interface_decl.rs  label.rs  mod.rs  namespace.rs  print.rs  return.rs  switch.rs  throw.rs  trait_decl.rs  try_catch.rs  unset.rs  use_decl.rs  varlike.rs
crates/phynix-parse/tests/: TODO.md  tests.rs  util.rs
crates/phynix-parse/tests/expr/: literal.rs  mod.rs  mod_tests.rs  precedence.rs  ternary.rs
crates/phynix-parse/tests/expr/snapshots/: tests__expr__literal__array_literal.snap  (+28 more)
crates/phynix-parse/tests/fixtures/: simple.php
crates/phynix-parse/tests/stmt/: class_decl.rs  decl.rs  echo.rs  enum_decl.rs  error_recovery.rs  function_decl.rs  if.rs  interface_decl.rs  loop.rs  misc.rs  mod.rs  trait_decl.rs
(+110 files in other folders)
