[package]
name = "phynix-parse"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.10"
phynix-core = { path = "../phynix-core" }
phynix-lex = { path = "../phynix-lex" }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
insta = { version = "1.34", features = ["yaml"] }
